[gd_scene load_steps=5 format=3 uid="uid://b0vjb5bn3scc6"]

[ext_resource type="Script" path="res://assets/inventory/inventory_interface.gd" id="1_nngjp"]
[ext_resource type="PackedScene" uid="uid://1jibijyrmdml" path="res://assets/inventory/inventory.tscn" id="2_lx6mc"]
[ext_resource type="PackedScene" uid="uid://drkn65mo0wkn8" path="res://assets/inventory/slot.tscn" id="3_wu2t0"]
[ext_resource type="PackedScene" uid="uid://tyolpjgbnmvl" path="res://assets/inventory/hot_bar_inventory.tscn" id="5_1io8h"]

[node name="InventoryInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nngjp")

[node name="Inventory" parent="." instance=ExtResource("2_lx6mc")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 416.0
offset_top = 20.0
offset_right = 456.0
offset_bottom = 60.0
columns = 6

[node name="EquipmentInventory" parent="." instance=ExtResource("2_lx6mc")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 984.0
offset_top = 136.0
offset_right = 1024.0
offset_bottom = 176.0
columns = 1

[node name="Skills" parent="." instance=ExtResource("2_lx6mc")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 328.0
offset_top = 416.0
offset_right = 368.0
offset_bottom = 456.0
columns = 8

[node name="ExternalInventory" parent="." instance=ExtResource("2_lx6mc")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 32.0
offset_top = 264.0
offset_right = 72.0
offset_bottom = 304.0

[node name="GrabbedSlot" parent="." instance=ExtResource("3_wu2t0")]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.490196)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="HotBarSetter" parent="." instance=ExtResource("5_1io8h")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 114.0
offset_top = 67.0
offset_right = 330.0
offset_bottom = 171.0
use_input = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
